[tool.poetry]
name = "bitflyer"
version = "0.1.13"
description = ""
authors = ["studio3104 <studio3104.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
websocket-client = "<1"  # For compatibility with `docker-compose`
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
